Worked through with Andy the double posting issue, wordwrap issue, applied the catch block properly, and triming before checking the text value.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -30,3 +30,6 @@
   box-shadow: 35px 30px 5px 0px #a5a5a5;
 }
 
+.tweet-content{
+  word-wrap: break-word;
+}
